--- a/plugin.yml
+++ b/plugin.yml
@@ -1,10 +1,10 @@
-name: BanUI
+name: TransferUI
 main: ZeroDev\Main
 version: 1.0.0
 api: 3.0.0-ALPHA9
 load: STARTUP
 author: ZeroDevOfficial
-description: allows admins to ban/unban players with a gui
+description: Transfer servers with a UI
 commands:
- banui:
- description: Ban\Pardon UI!
+ trui:
+ description: Transfer UI!
